# RouteD_Fleet_Repositioning_System_Project

./: .gitignore  Makefile  README.md  docker-compose.yml  portfolio_demo.py
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/ai/: __init__.py  client.py
backend/app/api/: analytics.py  deps.py  routes.py  simulation.py
backend/app/domain/: __init__.py  forecasting.py  graph.py  repositioning.py  vrp.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  network.py  optimizer.py  planning.py  seed.py
backend/app/warehouse/: analytics.py  client.py  etl.py  schema.py
backend/scripts/: evaluate_forecast.py  evaluate_repositioning.py  ingest_metrobike.py
backend/tests/: conftest.py  test_api.py  test_forecasting.py  test_graph.py  test_repositioning.py  test_vrp.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Briefing.tsx  MapView.tsx  OrderPanel.tsx  PlanView.tsx  RoutePanel.tsx
frontend/src/hooks/: useSimulation.ts
