[project]
name = "routeiq"
version = "0.1.0"
description = "RouteIQ — AI-assisted demand forecasting, fleet repositioning & dispatch platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "anthropic>=0.39",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]
postgres = [
    "psycopg[binary]>=3.1",
]
snowflake = [
    "snowflake-connector-python>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B905: several zips intentionally pair a sequence with its own offset tail.
ignore = ["B905"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query() in argument defaults is the documented pattern.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = []

# snowflake-connector-python is an optional extra and ships no type stubs.
[[tool.mypy.overrides]]
module = ["snowflake.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
